Fix z-index issues.

--- a/resources/assets/less/beatmaps.less
+++ b/resources/assets/less/beatmaps.less
@@ -226,9 +226,7 @@
 	margin: 5px;
 
 	&:hover {
-		z-index: 500;
-		/*.stats { color: @pink; }*/
-
+		z-index: 4;
 		.panel {
 			.thumb_cover {
 				opacity: 1;
