--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -10,7 +10,7 @@
 
 @z-index--visibility-hidden: 0;
 @z-index--body-background: 0;
-@z-index--profile-extra-tabs: 2;
+@z-index--profile-extra-tabs: 5;
 // navbar-static-top: 1000 (bootstrap nav for mobile)
 @z-index--forum-topic-headernav: 1001;
 @z-index--fixed-bar: 1001;
